Added new layouts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,27 @@
         android:theme="@style/Theme.SportQuiz"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".GameActivity"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
         <activity
+            android:name=".FinishActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.SportQuiz.Splash"
-            android:exported="true">
+            android:theme="@style/Theme.SportQuiz.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
